<resources>
    <string name="app_name">Transport Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_photos">Search Vehicle No</string>
    <string name="search_latest">Search: None</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="transport_image">Transport Image</string>
    <string name="meter_in_lbl">Meter In</string>
    <string name="meter_out_lbl">Meter Out</string>
    <string name="empty_vehicle_message">Sorry no vehicle is found. Please retry after some time or tap on sync button</string>
    <string name="driver_name">Driver Name</string>
    <string name="today_date">Today\'s date: dd/mm/yyyy</string>
    <string name="remarks">Remarks</string>
    <string name="time_in">Time In</string>
    <string name="time_out">Time Out</string>
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="logout">LogOut</string>
    <string name="logout_message">Are you sure you want to logout from this app?</string>
    <string name="processing_data">Processing Data</string>
    <string name="processing_attendance">Processing Attendance</string>
    <string name="done">Done</string>
    <string name="downloadin_data">Downloading Data..</string>
    <string name="options">Options</string>
    <string name="upload">Upload</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="do_you_want_to_download_data">Download user data</string>
    <string name="data_is_downloaded">Data has been downloaded</string>
</resources>